fix github link

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: samwmaynard@gmail.com
   facebook:
   flickr:
-  github: https://github.com/samm81
+  github: samm81
   instagram:
   linkedin:
   pinterest:
