--- a/.tmuxp.yaml
+++ b/.tmuxp.yaml
@@ -1,9 +1,9 @@
 session_name: blog
+start_directory: ./
 windows:
 - focus: 'true'
   layout: main-vertical
   panes:
   - jekyll serve
   - git status
-  start_directory: /home/sam/samm81.github.io
   window_name: tmuxp
