--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Sam Maynard
 
 # Short bio or description (displayed in the header)
-description: Student at UT Austin
+description: I do software ?
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/1221372
