--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,8 @@ footer-links:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: UA-104896580-1
 
+plausible_domain: samm81.github.io
+
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
 url: https://samm81.github.io
