config: remove google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ footer-links:
 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-104896580-1
+google_analytics:
 
 plausible_domain: samm81.github.io
 
